--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sectors.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sectors.html
@@ -78,9 +78,9 @@
           <td>Sector Notes</td>
           <td>Created By</td>
           <td>Date</td>
-          <td>Actions1</td>
-          <td>Actions2</td>
-          <td>Actions3</td>
+          <td>Navigate</td>
+          <td>Actions</td>
+          
           <td> . . . </td>
           <td></td>
           </tr>
@@ -115,12 +115,7 @@
              
             </tr>
             {% endif %}
-            
           
-
-
-
-
           {% for item in allifqueryset %} 
           <tr data-id="{{item.id}}">
           <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonSectorDetails' item.id user_var glblslug %}">{{item.name}}</a></td>
@@ -142,8 +137,6 @@
             </div>
           </td>
 
-
-
           <td>
             <div class="dropdown allifmaal-content-dropdown">
               <a class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false" href="#" onclick="showDropdown(event, this)">Actions</a>
@@ -161,9 +154,6 @@
             </div>
           </td>
 
-
-
-        
          <td> . . . </td>
          <td></td>
         </tr>
@@ -197,19 +187,6 @@
   </div><!--end of row div --->
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-  
 <div class="allif-loading-new-content">
 <div class="allif-load-content-here">Load Sectors</div>
 <script>
@@ -241,116 +218,8 @@
 
 </script>
 </div>
-<hr>
 
-<div>
-  <style>
-    .confirm-delete-dropdown {
-      display: none;
-    }
 
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #f9f9f9;
-      z-index: 1;
-    }
-
-    .dropdown-content a {
-      display: block;
-      padding: 12px 16px;
-      text-decoration: none;
-    }
-
-    .show {
-      display: block;
-    }
-
-    .confirm-delete {
-      background-color: #ffcccc; /* Red background for confirmation */
-    }
-  </style>
-
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Actions</th>
-        <th>Notes</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for item in allifqueryset %}
-      <tr data-id="{{ item.id }}">
-        <td>{{ item.name }}</td>
-
-        <td>
-          <div class="dropdown">
-            <a href="#" onclick="showDropdown(event, this)">Actions</a>
-            <div class="dropdown-content">
-              <a href="#" onclick="confirmDelete(this)">Delete</a>
-              <a href="{% url 'allifmaalcommonapp:commonSectors' user_var glblslug %}">Sectors</a>
-            </div>
-          </div>
-          <div class="dropdown confirm-delete-dropdown">
-            <a href="{% url 'allifmaalcommonapp:commonSectorDelete' item.id %}">Confirm</a>
-          </div>
-        </td>
-        <td>{{ item.notes }}</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-
-  <script>
-    let currentConfirmRow = null;
-
-    function showDropdown(event, element) {
-      event.preventDefault();
-
-      // Close other open dropdowns
-      var dropdowns = document.getElementsByClassName("dropdown-content");
-      for (var i = 0; i < dropdowns.length; i++) {
-        var openDropdown = dropdowns[i];
-        if (openDropdown.classList.contains('show') && openDropdown !== element.nextElementSibling) {
-          openDropdown.classList.remove('show');
-        }
-      }
-
-      // Toggle the current dropdown
-      element.nextElementSibling.classList.toggle("show");
-    }
-
-    function confirmDelete(element) {
-      const row = element.closest('tr'); // Get the closest <tr> element
-
-      if (currentConfirmRow && currentConfirmRow !== row) {
-        currentConfirmRow.classList.remove("confirm-delete");
-        currentConfirmRow.querySelector(".dropdown").style.display = "inline-block";
-        currentConfirmRow.querySelector(".confirm-delete-dropdown").style.display = "none";
-      }
-
-      row.classList.add("confirm-delete");
-      row.querySelector(".dropdown").style.display = "none";
-      row.querySelector(".confirm-delete-dropdown").style.display = "inline-block";
-
-      currentConfirmRow = row;
-    }
-
-    window.onclick = function(event) {
-      if (!event.target.matches('.dropdown-content a') && !event.target.matches('.dropdown a')) {
-        var dropdowns = document.getElementsByClassName("dropdown-content");
-        for (var i = 0; i < dropdowns.length; i++) {
-          var openDropdown = dropdowns[i];
-          if (openDropdown.classList.contains('show')) {
-            openDropdown.classList.remove('show');
-          }
-        }
-      }
-    }
-  </script>
-</div>
-<hr>
 
 </div>
 </div>
