--- a/allifmaalcommonapp/templates/allifmaalcommonapp/docformats/docformats.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/docformats/docformats.html
@@ -9,35 +9,7 @@
 {%endblock%}
 {% block body %}
 
-<style>
-  .confirm-delete-dropdown {
-    display: none;
-  }
 
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    z-index: 1;
-  }
-
-  .dropdown-content a {
-    display: block;
-    padding: 12px 16px;
-    text-decoration: none;
-  }
-
-  .show {
-    display: block;
-  }
-
-  .confirm-delete {
-    background-color: #ffcccc; /* Red background for confirmation */
-  }
-  #allif-confirm-delete{
-    color: red;
-  }
-</style>
 <!--start....main headere-->
 <div class="card-header">
 
@@ -130,11 +102,14 @@
             <div class="dropdown allifmaal-content-dropdown">
               <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Actions</a>
               <div class="dropdown-content">
-                <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete</a>
                 <a href="{% url 'allifmaalcommonapp:commonSectors' user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Sectors</a>
+                <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete</a>
+                
               </div>
             </div>
-            <div class="dropdown confirm-delete-dropdown">
+            <div class="dropdown allif-confirm-action">
+              
+              <a href="{% url 'allifmaalcommonapp:commonDocsFormat' user_var glblslug %}" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
               <a href="{% url 'allifmaalcommonapp:commonDeleteDocsFormat' item.id %}" id="allif-confirm-delete">Confirm</a>
             </div>
 
