--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sectors.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sectors.html
@@ -17,6 +17,9 @@
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
     <a href="{% url 'allifmaaladminapp:adminappHome' user_var glblslug %}"> Admin Home</a>
     <a href="{% url 'allifmaalcommonapp:commonSectors' user_var glblslug %}">Sectors </a>
+    <a href="{% url 'allifmaalcommonapp:dynamic_form_view' %}">Dynamic form</a>
+
+    
     <a class="allif-load-content-button" type="button">Load Sectors</a>
 
   <div class="dropdown allifmaal-content-dropdown">
